Update Installation Instructions